--- a/insight.html
+++ b/insight.html
@@ -39,7 +39,7 @@
                        'height':300};
 
         // Instantiate and draw our chart, passing in some options.
-        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
         chart.draw(data, options);
       }
     </script>
@@ -86,6 +86,7 @@
 			<div class="para">
 			<label class="title">Sleep</label>
 			<label class="summary">0.7% - 1.5hr</label>
+
 			 </div>
 			 <div class="diagram">
 		  
