--- a/profile.html
+++ b/profile.html
@@ -33,8 +33,6 @@
 		<label class = "profilename">Add and review entries of your symptoms to gain new insights from your log</label>
 		<br> 
 
-		<label class = "entry-information"> </label>
-
 		<div class= "multi-selector">
 		<div class = "select-field">
 			<label class = "summary" >Click on a date to see entry information</label>
@@ -101,7 +99,7 @@
         	<label class = "title">Entry Information</label>
 			<br>
 
-			<label class = "summary"></label>
+			<div class = "summary"></div>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
