--- a/profile.html
+++ b/profile.html
@@ -99,7 +99,7 @@
         	<label class = "title">Entry Information</label>
 			<br>
 
-			<div class = "summary"></div>
+			<label class = "summary"></label>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
