--- a/profile.html
+++ b/profile.html
@@ -258,7 +258,7 @@
 				list.innerHTML += myilnesses[a] + "<br>";
 			}
 
-			$('.summary').text($(this).attr('details'));
+			$('.summary').text($(item).attr('details'));
 	 }
 
 	   </script>
