--- a/profile.html
+++ b/profile.html
@@ -121,8 +121,8 @@
 			</div>
 			</div>
 
-			<div class="progress-circle-container" style = "left:20px">
-				<div class = "mini">
+			<div class="progress-circle-container">
+				<div class = "mini" style = "left:10px">
 					<label class = "summary">
 						Nausea is most associated with flu symptoms 
 					</label>
