--- a/profile.html
+++ b/profile.html
@@ -121,7 +121,7 @@
 			</div>
 			</div>
 
-			<div class="progress-circle-container" style = "left:200px">
+			<div class="progress-circle-container">
 				<div class = "mini">
 					<label class = "summary">
 						Nausea is most associated with flu symptoms 
