--- a/profile.html
+++ b/profile.html
@@ -99,7 +99,7 @@
         	<label class = "title">Entry Information</label>
 			<br>
 
-			<p class = "summary"></p>
+			<p class = "entry-info"></p>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
@@ -190,7 +190,7 @@
 		var id = 0;
 
 
-		$(".task").click(function(event) { $('.summary').text($(this).attr('details')); })
+		$(".task").click(function(event) { $('.entry-info').text($(this).attr('details')); })
 
 
 	   function refresh()
