--- a/profile.html
+++ b/profile.html
@@ -190,7 +190,7 @@
 		var id = 0;
 
 
-		$(".task").click(function(event) { $('.entry-info').text($(this).attr('details')); })
+		$(list[id]).click(function(event) { $('.entry-info').text($(this).attr('details')); })
 
 
 	   function refresh()
