--- a/profile.html
+++ b/profile.html
@@ -99,7 +99,7 @@
         	<label class = "title">Entry Information</label>
 			<br>
 
-			<div id = "entry-info">Text</div>
+			<div class = "entry-info">Text</div>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
@@ -201,7 +201,7 @@
 	   function select(val)
 	   {
 			var item = document.getElementById(val);
-			var entryInfo = document.getElementById('entry-info');
+			var entryInfo = document.getElementByClassName('entry-info');
 			entryInfo.innerHTML = "insert text here";
 
 			if(!selected)
