--- a/profile.html
+++ b/profile.html
@@ -99,7 +99,7 @@
         	<label class = "title">Entry Information</label>
 			<br>
 
-			<div class = "summary" id = "entry-info" onclick = "displayInfo(this.id);">Text</div>
+			<div class = "summary" id = "entry-info" onload = "displayInfo(this.id);">Text</div>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
