--- a/profile.html
+++ b/profile.html
@@ -100,7 +100,7 @@
 			<br>
 			<br>
 
-			<div id = "entry-info" class = "summary">Text</div>
+			<div id = "entry-info" class = "summary"></div>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
