--- a/profile.html
+++ b/profile.html
@@ -258,28 +258,28 @@
 				list.innerHTML += myilnesses[a] + "<br>";
 			}
 
-			
+
 			var entryInfo = document.getElementById("entry-info");
 
-			if(id = 1)
+			if(val = 1)
 				entryInfo.innerHTML = "Reported headache, depression and difficulty focusing";
-			else if(id = 2)
+			else if(val = 2)
 				entryInfo.innerHTML = "Reported nausea and flu symptoms";
-			else if(id = 3)
+			else if(val = 3)
 				entryInfo.innerHTML = "Reported headache and difficulty focusing";
-			else if(id = 4)
+			else if(val = 4)
 				entryInfo.innerHTML = "Reported stomach pain, nausea and flu symptoms";
-			else if(id = 5)
+			else if(val = 5)
 				entryInfo.innerHTML = "Reported weakness and achiness";
-			else if(id = 6)
+			else if(val = 6)
 				entryInfo.innerHTML = "Reported difficulty breathing";
-			else if(id = 7)
+			else if(val = 7)
 				entryInfo.innerHTML = "Reported depression and anxiety";
-			else if(id = 8)
+			else if(val = 8)
 				entryInfo.innerHTML = "Reported depression and anxiety";
-			else if(id = 9)
+			else if(val = 9)
 				entryInfo.innerHTML = "Reported depression";
-			else if(id = 10)
+			else if(val = 10)
 				entryInfo.innerHTML = "Reported weakness";
 	    }
 
