--- a/profile.html
+++ b/profile.html
@@ -100,7 +100,7 @@
 			<br>
 			<br>
 
-			<div id = "entry-info" class = "summary" style = "left:-200px"></div>
+			<div id = "entry-info" class = "summary" style = "left:-200px">tex</div>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
@@ -272,7 +272,7 @@
 
 
 			var entryInfo = document.getElementById("entry-info");
-			entryInfo.innerHTML = entryContent[val];
+			entryInfo.innerHTML = entryContent[val - 1];
 	    }
 
 	</script>
