--- a/profile.html
+++ b/profile.html
@@ -199,6 +199,7 @@
 				"Reported difficulty breathing",
 				"Reported depression and anxiety",
 				"Reported depression and anxiety",
+				"Reported depression",
 				"Reported weakness"
 			];
 
