--- a/profile.html
+++ b/profile.html
@@ -191,16 +191,16 @@
 		var id = 0;
 
 		var entryContent = [
-				"Reported headache, depression and difficulty focusing",
-				"Reported nausea and flu symptoms",
-				"Reported headache and difficulty focusing",
-				"Reported stomach pain, nausea and flu symptoms",
-				"Reported weakness and achiness",
-				"Reported difficulty breathing",
-				"Reported depression and anxiety",
-				"Reported depression and anxiety",
-				"Reported depression",
-				"Reported weakness"
+				"Reported: \n headaches \n depression \n difficulty focusing",
+				"Reported: \n nausea \n flu symptoms",
+				"Reported: \n headaches \n difficulty focusing",
+				"Reported: \n stomach pain \n nausea \n flu symptoms",
+				"Reported: \n weakness \n achiness",
+				"Reported: \n difficulty breathing",
+				"Reported: \n depression \n anxiety",
+				"Reported: \n depression \n anxiety",
+				"Reported: \n depression",
+				"Reported: \n weakness"
 			];
 
 
