--- a/profile.html
+++ b/profile.html
@@ -191,16 +191,16 @@
 		var id = 0;
 
 		var entryContent = [
-				"Reported: \n headaches \n depression \n difficulty focusing",
-				"Reported: \n nausea \n flu symptoms",
-				"Reported: \n headaches \n difficulty focusing",
-				"Reported: \n stomach pain \n nausea \n flu symptoms",
-				"Reported: \n weakness \n achiness",
-				"Reported: \n difficulty breathing",
-				"Reported: \n depression \n anxiety",
-				"Reported: \n depression \n anxiety",
-				"Reported: \n depression",
-				"Reported: \n weakness"
+				"Reported: headaches\ndepression\ndifficulty focusing",
+				"Reported:\nnausea\nflu symptoms",
+				"Reported:\nheadaches\ndifficulty focusing",
+				"Reported:\nstomach pain\nnausea\nflu symptoms",
+				"Reported:\nweakness\nachiness",
+				"Reported:\ndifficulty breathing",
+				"Reported:\ndepression\nanxiety",
+				"Reported:\ndepression\nanxiety",
+				"Reported:\ndepression",
+				"Reported:\nweakness"
 			];
 
 
