--- a/profile.html
+++ b/profile.html
@@ -191,7 +191,7 @@
 		var id = 0;
 
 		var entryContent = [
-				"Reported: headaches\ndepression\ndifficulty focusing",
+				"Reported:\nheadaches\ndepression\ndifficulty focusing",
 				"Reported:\nnausea\nflu symptoms",
 				"Reported:\nheadaches\ndifficulty focusing",
 				"Reported:\nstomach pain\nnausea\nflu symptoms",
