--- a/profile.html
+++ b/profile.html
@@ -191,7 +191,10 @@
 		var id = 0;
 
 		var entryContent = [
-				"Reported:\nheadaches\ndepression\ndifficulty focusing",
+				`Reported:
+				headaches
+				depression
+				difficulty focusing`,
 				"Reported:\nnausea\nflu symptoms",
 				"Reported:\nheadaches\ndifficulty focusing",
 				"Reported:\nstomach pain\nnausea\nflu symptoms",
