--- a/profile.html
+++ b/profile.html
@@ -191,7 +191,7 @@
 		var id = 0;
 
 		var entryContent = [
-				`Reported:
+				`Reported:\n
 				headaches
 				depression
 				difficulty focusing`,
