--- a/profile.html
+++ b/profile.html
@@ -100,7 +100,7 @@
 			<br>
 			<br>
 
-			<div id = "entry-info" class = "task" style = "left:-200px"></div>
+			<div id = "entry-info" class = "summary" style = "left:-200px"></div>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
@@ -191,10 +191,7 @@
 		var id = 0;
 
 		var entryContent = [
-				`Reported:\n
-				headaches
-				depression
-				difficulty focusing`,
+				"Reported:\nheadaches\ndepression\ndifficulty focusing",
 				"Reported:\nnausea\nflu symptoms",
 				"Reported:\nheadaches\ndifficulty focusing",
 				"Reported:\nstomach pain\nnausea\nflu symptoms",
