--- a/profile.html
+++ b/profile.html
@@ -191,16 +191,16 @@
 		var id = 0;
 
 		var entryContent = [
-				"Reported:\nheadaches\ndepression\ndifficulty focusing",
-				"Reported:\nnausea\nflu symptoms",
-				"Reported:\nheadaches\ndifficulty focusing",
-				"Reported:\nstomach pain\nnausea\nflu symptoms",
-				"Reported:\nweakness\nachiness",
-				"Reported:\ndifficulty breathing",
-				"Reported:\ndepression\nanxiety",
-				"Reported:\ndepression\nanxiety",
-				"Reported:\ndepression",
-				"Reported:\nweakness"
+				"Reported:          headaches          depression         difficulty focusing",
+				"Reported:nauseaflu symptoms",
+				"Reported:headaches          difficulty focusing",
+				"Reported:stomach painnauseaflu symptoms",
+				"Reported:weaknessachiness",
+				"Reported:difficulty breathing",
+				"Reported:depressionanxiety",
+				"Reported:depressionanxiety",
+				"Reported:depression",
+				"Reported:weakness"
 			];
 
 
