--- a/profile.html
+++ b/profile.html
@@ -191,16 +191,16 @@
 		var id = 0;
 
 		var entryContent = [
-				"Reported:          headaches          depression         difficulty focusing",
-				"Reported:          nausea             flu symptoms",
-				"Reported:          headaches          difficulty focusing",
-				"Reported:          stomach pain     nausea             flu symptoms",
-				"Reported:          weakness           achiness",
-				"Reported:          difficulty breathing",
-				"Reported:          depression         anxiety",
-				"Reported:          depression         anxiety",
-				"Reported:          depression",
-				"Reported:          weakness"
+				"Reported: headaches, depression and difficulty focusing",
+				"Reported: nausea and flu symptoms",
+				"Reported: headaches and difficulty focusing",
+				"Reported: stomach pain, nausea and flu symptoms",
+				"Reported: weakness and achiness",
+				"Reported: difficulty breathing",
+				"Reported: depression and anxiety",
+				"Reported: depression and anxiety",
+				"Reported: depression",
+				"Reported: weakness"
 			];
 
 
