--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,7 @@
 			<label class = "summary" >Click on a date to see entry information</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
-				 <div class = "list" style = "overflow-y:scroll;height: 300px; ">
+				 <div class = "list" style = "overflow-y:scroll;height: 300px; color: purple;">
 				   <label class = "title"></label>
 			
 				   <label id = "1" class = "task" onclick = "select(this.id);">
@@ -100,7 +100,7 @@
 			<br>
 			<br>
 
-			<div id = "entry-info" class = "profilename" style = "left:-600px"></div>
+			<div id = "entry-info" class = "profilename" style = "color: purple;"></div>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
