--- a/profile.html
+++ b/profile.html
@@ -38,47 +38,47 @@
 			<label class = "summary" >Click on a date to see entry information</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
-				 <div class = "list" style = "overflow-y:scroll;height: 300px; color: purple;">
+				 <div class = "list" style = "overflow-y:scroll;height: 300px;">
 				   <label class = "title"></label>
 			
-				   <label id = "1" class = "task" onclick = "select(this.id);">
+				   <label id = "1" class = "task" onclick = "select(this.id);" style = "color: purple;">
 						September 1st 2021 
 				</label>
 			
-				  <label id = "2" class = "task" onclick = "select(this.id);">  
+				  <label id = "2" class = "task" onclick = "select(this.id);" style = "color: purple;">  
 						September 9th 2021
 				  </label>
 			
-				   <label id = "3" class = "task" onclick = "select(this.id);">
+				   <label id = "3" class = "task" onclick = "select(this.id);" style = "color: purple;">
 						September 25th 2021  
 				 </label>
 			
 				 <label class = "title"></label>
-					   <label id = "4" class = "task" onclick = "select(this.id);">
+					   <label id = "4" class = "task" onclick = "select(this.id);" style = "color: purple;">
 						October 3rd 2021
 				 </label>
 			
-				   <label id = "5" class = "task" onclick = "select(this.id);">
+				   <label id = "5" class = "task" onclick = "select(this.id);" style = "color: purple;">
 						October 12th 2021
 				 </label>
 			
-				 <label id = "6" class = "task" onclick = "select(this.id);">
+				 <label id = "6" class = "task" onclick = "select(this.id);" style = "color: purple;">
 						October 20th 2021
 				 </label>
 			
-				 <label id = "7" class = "task" onclick = "select(this.id);">
+				 <label id = "7" class = "task" onclick = "select(this.id);" style = "color: purple;">
 						November 1st 2021
 				</label>
 			
-				<label id = "8" class = "task" onclick = "select(this.id);">
+				<label id = "8" class = "task" onclick = "select(this.id);" style = "color: purple;">
 						November 2nd 2021
 				</label>
 			
-				<label id = "9" class = "task" onclick = "select(this.id);">
+				<label id = "9" class = "task" onclick = "select(this.id);" style = "color: purple;">
 						November 3rd 2021
 				</label>
 			
-				<label id = "10" class = "task" onclick = "select(this.id);">
+				<label id = "10" class = "task" onclick = "select(this.id);" style = "color: purple;">
 						November 4th 2021
 				</label>
 				 
