--- a/profile.html
+++ b/profile.html
@@ -41,44 +41,44 @@
 				 <div class = "list" style = "overflow-y:scroll;height: 300px;">
 				   <label class = "title"></label>
 			
-				   <label id = "1" class = "task" onclick = "select(this.id);" style = "color: purple;">
+				   <label id = "1" class = "task" onclick = "select(this.id);">
 						September 1st 2021 
 				</label>
 			
-				  <label id = "2" class = "task" onclick = "select(this.id);" style = "color: purple;">  
+				  <label id = "2" class = "task" onclick = "select(this.id);">  
 						September 9th 2021
 				  </label>
 			
-				   <label id = "3" class = "task" onclick = "select(this.id);" style = "color: purple;">
+				   <label id = "3" class = "task" onclick = "select(this.id);">
 						September 25th 2021  
 				 </label>
 			
 				 <label class = "title"></label>
-					   <label id = "4" class = "task" onclick = "select(this.id);" style = "color: purple;">
+					   <label id = "4" class = "task" onclick = "select(this.id);">
 						October 3rd 2021
 				 </label>
 			
-				   <label id = "5" class = "task" onclick = "select(this.id);" style = "color: purple;">
+				   <label id = "5" class = "task" onclick = "select(this.id);">
 						October 12th 2021
 				 </label>
 			
-				 <label id = "6" class = "task" onclick = "select(this.id);" style = "color: purple;">
+				 <label id = "6" class = "task" onclick = "select(this.id);">
 						October 20th 2021
 				 </label>
 			
-				 <label id = "7" class = "task" onclick = "select(this.id);" style = "color: purple;">
+				 <label id = "7" class = "task" onclick = "select(this.id);">
 						November 1st 2021
 				</label>
 			
-				<label id = "8" class = "task" onclick = "select(this.id);" style = "color: purple;">
+				<label id = "8" class = "task" onclick = "select(this.id);">
 						November 2nd 2021
 				</label>
 			
-				<label id = "9" class = "task" onclick = "select(this.id);" style = "color: purple;">
+				<label id = "9" class = "task" onclick = "select(this.id);">
 						November 3rd 2021
 				</label>
 			
-				<label id = "10" class = "task" onclick = "select(this.id);" style = "color: purple;">
+				<label id = "10" class = "task" onclick = "select(this.id);">
 						November 4th 2021
 				</label>
 				 
@@ -100,7 +100,7 @@
 			<br>
 			<br>
 
-			<div id = "entry-info" class = "profilename" style = "color: purple;"></div>
+			<div id = "entry-info" class = "profilename" style = "width:100%; color:purple;"></div>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
