--- a/profile.html
+++ b/profile.html
@@ -143,7 +143,7 @@
 			<a class= "gradient-button gradient-button-2" onclick = "location.href='insight.html';" id="log">Investigate further</a><br/>
 
 			<div class = "avatar" style = "left:460px; top:5px">
-				<img class="logo" src="light-bulb.png" width = "65px">
+				<img class="logo" src="magnifying-glass.png" width = "65px">
 			</div>
 		</div>
 	</div>
