--- a/physicalOrMental.html
+++ b/physicalOrMental.html
@@ -32,6 +32,7 @@
 	
 		
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Physical Well Being Checkup</a><br/>
+		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Physical Well Being Checkup</a><br/>
 
 		
 	</div>
