--- a/physicalOrMental.html
+++ b/physicalOrMental.html
@@ -32,7 +32,8 @@
 	
 		
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Physical Well Being Checkup</a><br/>
-		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Physical Well Being Checkup</a><br/>
+		
+        <a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Mental Well Being Checkup</a><br/>
 
 		
 	</div>
