--- a/profile.html
+++ b/profile.html
@@ -41,7 +41,7 @@
 				 <div class = "list" style = "overflow-y:scroll;height: 300px;">
 				   <label class = "title"></label>
 			
-				   <label id = "1" class = "task" onclick = "select(this.id);">
+				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding:5px5px">
 						September 1st 2021 
 				</label>
 			
@@ -85,7 +85,7 @@
 			</div>
 		</div>
 		
-		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
+		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">See all entries</a><br/>
 
 		<div class = "avatar">
 			<img class="logo" src="1.png" width = "200px">
@@ -140,7 +140,7 @@
 			</div>
 			
 
-			<a class= "gradient-button gradient-button-2" onclick = "location.href='insight.html';" id="log">Investigate further</a><br/>
+			<a class= "gradient-button gradient-button-2" onclick = "location.href='insight.html';" id="log">View more insights</a><br/>
 
 			<div class = "avatar" style = "left:450px; top:10px">
 				<img class="logo" src="magnifying-glass.png" width = "70px">
