--- a/profile.html
+++ b/profile.html
@@ -41,7 +41,7 @@
 				 <div class = "list" style = "overflow-y:scroll;height: 300px;">
 				   <label class = "title"></label>
 			
-				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding:5px5px">
+				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
 						September 1st 2021 
 				</label>
 			
