--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,7 @@
 			</div>
 		</div>
 		
-		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">See all entries</a><br/>
+		<a class= "gradient-button gradient-button-2" onclick = "location.href='loghistory.html';" id="log">See all entries</a><br/>
 
 		<div class = "avatar">
 			<img class="logo" src="1.png" width = "200px">
