--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
 		<br>
-		<label class = "profilename">Review the most recent entries of your symptoms to gain new insights</label>
+		<label class = "profilename" style = "padding-right:20px">Review the most recent entries of your symptoms to gain new insights</label>
 		<br> 
 
 		<div class= "multi-selector">
