--- a/loghistory.html
+++ b/loghistory.html
@@ -27,7 +27,7 @@
 
 	<div class = contentwrap>
 	<div class = "wrapper" id = "checkup">
-		<label class = "title" width="100%">Log Entries</label>
+		<label class = "title" width="100%">Log History</label>
 		<br>
 		<br>
 		<label class = "profilename">Add and review entries of your symptoms to gain new insights from your log</label>
@@ -96,12 +96,12 @@
 	
 	<div class = "contentwrap" id = tab2>
 
-		<div class = "wrapper" id = "goals">
-        	<label class = "title">Entry Information</label>
+		<div class = "wrapper" id = "goals" style = "top:-11px">
+        	<label class = "title">Logging Streak</label>
         </div>
 
-		<div class = "wrapper" id = "insights">
-			<label class = "title">Key Insights</label>
+		<div class = "wrapper" id = "insights" style = "top:16px">
+			<label class = "title">Common Symptoms</label>
 		</div>
 	</div>
 </div>
