--- a/loghistory.html
+++ b/loghistory.html
@@ -100,7 +100,7 @@
         	<label class = "title">Logging Streak</label>
         </div>
 
-		<div class = "wrapper" id = "insights" style = "top:16px">
+		<div class = "wrapper" id = "goals" style = "top:16px">
 			<label class = "title">Common Symptoms</label>
 		</div>
 	</div>
