--- a/loghistory.html
+++ b/loghistory.html
@@ -35,7 +35,7 @@
 
 		<div class= "multi-selector">
 		<div class = "select-field">
-			<input type = "text" name ="" placeholder= "Click on a date to see entry info and key insights" id = "" class = "input-selector">
+			<input type = "text" name ="" placeholder= "Search for entries by date (ex. 11/01/21)" id = "" class = "input-selector">
 				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll;height: 300px; ">
