--- a/loghistory.html
+++ b/loghistory.html
@@ -30,7 +30,7 @@
 		<label class = "title" width="100%">Log History</label>
 		<br>
 		<br>
-		<label class = "profilename">Add and review entries of your symptoms to gain new insights from your log</label>
+		<label class = "profilename">Keep track of all your entries by date and the most common symptoms you have recently logged</label>
 		<br> 
 
 		<div class= "multi-selector">
