--- a/loghistory.html
+++ b/loghistory.html
@@ -42,44 +42,44 @@
 				   <label class = "title"></label>
 			
 				   <label id = "1" class = "task" onclick = "select(this.id);">
-					11/01/21 - Reported headaches 
+					09/01/21 - headaches, depression, difficulty focusing 
 				</label>
 			
 				  <label id = "2" class = "task" onclick = "select(this.id);">  
-					11/03/21 - Reported nausea
+					09/09/21 - nausea, flu symptoms
 				  </label>
 			
 				   <label id = "3" class = "task" onclick = "select(this.id);">
-						11/16/21 - Reported achiness  
+						09/25/21 - headaches, difficulty focusing 
 				 </label>
 			
 				 <label class = "title"></label>
 					   <label id = "4" class= "task" onclick = "select(this.id);">
-					   11/17/21 - Reported stomach pain
+					   10/03/21 - stomach pain, nausea, flu symptoms
 				 </label>
 			
 				   <label id = "5" class = "task" onclick = "select(this.id);">
-						11/18/21 - Reported difficulty focusing
+						10/12/21 - weakness, achiness
 				 </label>
 			
 				 <label id = "5" class = "task" onclick = "select(this.id);">
-					11/18/21 - Reported difficulty focusing
+					10/20/21 - difficulty breathing
 				 </label>
 			
 				 <label id = "5" class = "task" onclick = "select(this.id);">
-					11/18/21 - Reported difficulty focusing
+					11/01/21 - depression, anxiety
 				</label>
 			
 				<label id = "5" class = "task" onclick = "select(this.id);">
-					11/18/21 - Reported difficulty focusing
+					11/02/21 - depression, anxiety
 				</label>
 			
 				<label id = "5" class = "task" onclick = "select(this.id);">
-					11/18/21 - Reported difficulty focusing
+					11/03/21 - depression
 				</label>
 			
 				<label id = "5" class = "task" onclick = "select(this.id);">
-					11/18/21 - Reported difficulty focusing
+					11/04/21 - weakness
 				</label>
 				 
 				 </div>
