--- a/profile.html
+++ b/profile.html
@@ -194,7 +194,7 @@
 				"Reported: headaches, depression and difficulty focusing",
 				"Reported: nausea and flu symptoms",
 				"Reported: headaches and difficulty focusing",
-				"Reported: stomach pain, nausea and flu symptoms",
+				"Reported: stomachache, nausea and flu symptoms",
 				"Reported: weakness and achiness",
 				"Reported: difficulty breathing",
 				"Reported: depression and anxiety",
