--- a/loghistory.html
+++ b/loghistory.html
@@ -35,10 +35,10 @@
 
 		<div class= "multi-selector">
 		<div class = "select-field" style = "background-color:rgb(199, 198, 198)">
-			<input type = "text" name ="" placeholder= "Search for entries by date (ex. 06/05/21)" id = "" class = "input-selector" style = "color:black">
+			<input type = "text" name ="" placeholder= "Search for entries by date (ex. 06/05/21)" id = "" class = "input-selector">
 				 </div>
 			<!---------List of checkboxes and options----------->
-				 <div class = "list" style = "overflow-y:scroll;height: 300px; ">
+				 <div class = "list" style = "overflow-y:scroll;height: 310px; ">
 					<label id = "1" class = "task" onclick = "select(this.id);">
 						06/05/21 - back pain
 					</label>
