--- a/loghistory.html
+++ b/loghistory.html
@@ -78,7 +78,7 @@
 						08/19/21 - nausea
 					</label>		
 				   <label id = "11" class = "task" onclick = "select(this.id);">
-					09/01/21 - headaches, depression, difficulty focusing 
+					09/01/21 - headaches, depression 
 				</label>
 			
 				  <label id = "12" class = "task" onclick = "select(this.id);">  
