--- a/loghistory.html
+++ b/loghistory.html
@@ -35,7 +35,7 @@
 
 		<div class= "multi-selector">
 		<div class = "select-field" style = "background-color:rgb(1, 154, 255)">
-			<input type = "text" name ="" placeholder= "Search for entries by date (ex. 06/05/21)" id = "" class = "input-selector">
+			<input type = "text" name ="" placeholder= "Search for entries by date (ex. 06/05/21)" id = "" class = "input-selector" style = "top:-30px">
 				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll;height: 300px; ">
