--- a/loghistory.html
+++ b/loghistory.html
@@ -34,8 +34,8 @@
 		<br> 
 
 		<div class= "multi-selector">
-		<div class = "select-field" style = "background-color:rgb(88, 186, 252)">
-			<input type = "text" name ="" placeholder= "Search for entries by date (ex. 06/05/21)" id = "" class = "input-selector" style = "top:-30px">
+		<div class = "select-field" style = "background-color:lightgrey; top:-20px">
+			<input type = "text" name ="" placeholder= "Search for entries by date (ex. 06/05/21)" id = "" class = "input-selector">
 				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll;height: 300px; ">
