--- a/loghistory.html
+++ b/loghistory.html
@@ -34,11 +34,11 @@
 		<br> 
 
 		<div class= "multi-selector">
-		<div class = "select-field" style = "background-color:lightgrey; top:-200px">
+		<div class = "select-field" style = "background-color:lightgrey">
 			<input type = "text" name ="" placeholder= "Search for entries by date (ex. 06/05/21)" id = "" class = "input-selector">
 				 </div>
 			<!---------List of checkboxes and options----------->
-				 <div class = "list" style = "overflow-y:scroll;height: 300px; ">
+				 <div class = "list" style = "overflow-y:scroll;height: 300px; top:20px">
 					<label id = "1" class = "task" onclick = "select(this.id);">
 						06/05/21 - back pain
 					</label>
