--- a/loghistory.html
+++ b/loghistory.html
@@ -34,7 +34,7 @@
 		<br> 
 
 		<div class= "multi-selector">
-		<div class = "select-field" style = "color:lightgrey">
+		<div class = "select-field" style = "background-color:lightgrey; width:90%">
 			<input type = "text" name ="" placeholder= "Search for entries by date (ex. 06/05/21)" id = "" class = "input-selector">
 				 </div>
 			<!---------List of checkboxes and options----------->
