--- a/loghistory.html
+++ b/loghistory.html
@@ -132,6 +132,14 @@
 
 		<div class = "wrapper" id = "goals" style = "top:-11px">
         	<label class = "title">Logging Streak</label>
+
+			<div class = "avatar">
+				<img class="logo" src="fire.gif" width = "200px">
+			</div>
+
+			<div class = "avatar">
+				<img class="logo" src="fire.gif" width = "200px">
+			</div>
         </div>
 
 		<div class = "wrapper" id = "goals" style = "top:16px">
