--- a/loghistory.html
+++ b/loghistory.html
@@ -133,11 +133,11 @@
 		<div class = "wrapper" id = "goals" style = "top:-11px">
         	<label class = "title">Logging Streak</label>
 
-			<div class = "avatar">
+			<div class = "avatar" style = "top:200px">
 				<img class="logo" src="fire.gif" width = "200px">
 			</div>
 
-			<div class = "avatar">
+			<div class = "avatar" style = "top:200px; left:-200px">
 				<img class="logo" src="fire.gif" width = "200px">
 			</div>
         </div>
