--- a/loghistory.html
+++ b/loghistory.html
@@ -130,7 +130,7 @@
 	
 	<div class = "contentwrap" id = tab2>
 
-		<div class = "wrapper" id = "goals" style = "top:-11px">
+		<div class = "wrapper" id = "goals" style = " color:rgb(209, 250, 255); top:-11px">
         	<label class = "title">Logging Streak</label>
 
 			<div class = "avatar" style = "top:100px">
