--- a/loghistory.html
+++ b/loghistory.html
@@ -132,7 +132,7 @@
 
 		<div class = "wrapper" id = "goals" style = "background-color:rgb(244, 254, 255); top:-11px">
         	<label class = "title">Logging Streak</label>
-			<div class = "profilename" style = "color:orange">Keep track of all your entries by date and the most common symptoms you have recently logged</div>
+			<div class = "profilename" style = "color:orange; left:50px">Keep track of all your entries by date and the most common symptoms you have recently logged</div>
 
 			<div class = "avatar" style = "top:100px; left:20px">
 				<img class="logo" src="fire.gif" width = "150px">
