--- a/loghistory.html
+++ b/loghistory.html
@@ -136,8 +136,9 @@
 			<div class = "goalstab">
 				<div class="progress-circle-container">
 					<div class = "mini">
-						<div class = "profilename" style = "color:orange; left:50px">Keep track of all your entries by date and the most common symptoms you have recently logged</div>
-				</div>
+						<div class = "profilename" style = "color:orange; left:50px">You've logged 4 days in a row!!!</div>
+				   </div>
+			   </div>
 			</div>
 
 			<div class = "avatar" style = "top:100px; left:20px">
@@ -148,7 +149,7 @@
 				<img class="logo" src="fire.gif" width = "150px">
 			</div>
         </div>
-		
+
 
 		<div class = "wrapper" id = "goals" style = "top:16px">
 			<label class = "title">Common Symptoms</label>
