--- a/loghistory.html
+++ b/loghistory.html
@@ -134,7 +134,7 @@
         	<label class = "title">Logging Streak</label>
 
 			<div class = "goalstab">
-					<div class = "mini">
+					<div class = "mini" style = "left:50px">
 						<div class = "profilename" style = "color:orange; left:50px">You've logged 4 days in a row!!!</div>
 				   </div>
 			</div>
