--- a/loghistory.html
+++ b/loghistory.html
@@ -133,8 +133,8 @@
 		<div class = "wrapper" id = "goals" style = "background-color:rgb(244, 254, 255); top:-11px">
         	<label class = "title">Logging Streak</label>
 
-			<div class = "goalstab">
-					<div class = "mini" style = "left:50px">
+			<div class = "goalstab" style = "left:50px">
+					<div class = "mini">
 						<div class = "profilename" style = "color:orange; left:50px">You've logged 4 days in a row!!!</div>
 				   </div>
 			</div>
