--- a/loghistory.html
+++ b/loghistory.html
@@ -134,8 +134,7 @@
         	<label class = "title">Logging Streak</label>
 
 			<div class = "goalstab">
-					<div class = "mini">
-					</div>
+					<div class = "mini"></div>
 
 					<div class = "mini">
 						<div class = "profilename" style = "color:orange">You've logged 4 days in a row!!!</div>
