--- a/loghistory.html
+++ b/loghistory.html
@@ -135,6 +135,8 @@
 
 			<div class = "goalstab">
 					<div class = "mini"></div>
+					<div class = "mini"></div>
+					<div class = "mini"></div>
 
 					<div class = "mini">
 						<div class = "profilename" style = "color:orange">You've logged 4 days in a row!!!</div>
