--- a/loghistory.html
+++ b/loghistory.html
@@ -137,6 +137,9 @@
 					<div class = "mini"></div>
 					<div class = "mini"></div>
 					<div class = "mini"></div>
+					<div class = "mini"></div>
+					<div class = "mini"></div>
+					<div class = "mini"></div>
 
 					<div class = "mini">
 						<div class = "profilename" style = "color:orange">You've logged 4 days in a row!!!</div>
