--- a/loghistory.html
+++ b/loghistory.html
@@ -144,7 +144,7 @@
 					<div class = "mini"></div>
 
 					<div class = "mini">
-						<div class = "profilename" style = "color:orange">You've logged 4 days in a row!!!</div>
+						<div class = "profilename" style = "color:orange; font-size:20">You've logged 4 days in a row!!!</div>
 				   </div>
 			</div>
 
