--- a/loghistory.html
+++ b/loghistory.html
@@ -141,6 +141,7 @@
 					<div class = "mini"></div>
 					<div class = "mini"></div>
 					<div class = "mini"></div>
+					<div class = "mini"></div>
 
 					<div class = "mini">
 						<div class = "profilename" style = "color:orange; font-size:30px">You've logged 4 days in a row!!!</div>
