--- a/loghistory.html
+++ b/loghistory.html
@@ -159,7 +159,7 @@
 
 
 		<div class = "wrapper" id = "goals" style = "top:16px">
-			<label class = "title">Common Symptoms</label>
+			<label class = "title">Most common symptoms over the past 3 days:</label>
 		</div>
 	</div>
 </div>
