--- a/loghistory.html
+++ b/loghistory.html
@@ -10,6 +10,11 @@
 </head>
 
 <body style="background:#f0effa;display: grid;">
+	<div class = "wrapper">
+        <div width = "50%" style="text-align:left;color: blue" onclick="backButton()">
+          < Back
+        </div>
+    </div>
 
 	<div class = "contentwrap">
 	<div class = "wrapper" id = "profileinfo">
@@ -192,6 +197,26 @@
 			</div>
 		</div>
 	</div>
+
+
+
+	<script>
+
+	function backButton(){
+      if (slider.style.marginLeft =="-100%"){
+        slider.style.marginLeft ="0";
+        l2.className ="";
+        l3.className ="";
+      }else if(slider.style.marginLeft =="-200%"){
+               slider.style.marginLeft ="-100%";
+               l2.className = "active" ;
+               l3.className ="";
+      }else{
+        window.open("profile.html?#");
+      }
+    }
+
+	</script>
 
 </body>
 </html>
