--- a/loghistory.html
+++ b/loghistory.html
@@ -17,7 +17,7 @@
 			<div class = "username">Your Log</div>
 
 			<div class = "wrapper">
-				<div width = "50%" style="text-align:left;color: blue" onclick="backButton()">
+				<div width = "50%" style="top:20px;left:-20px;text-align:left;color: blue" onclick="backButton()">
 				  < Back
 				</div>
 			</div>
