--- a/loghistory.html
+++ b/loghistory.html
@@ -16,8 +16,8 @@
 		<div class = "profile">
 			<div class = "username">Your Log</div>
 
-			<div class = "wrapper">
-				<div width = "50%" style="top:20px;left:-20px;text-align:left;color: blue" onclick="backButton()">
+			<div class = "wrapper" style = "top:20px;left:-20px">
+				<div width = "50%" style="text-align:left;color: blue" onclick="backButton()">
 				  < Back
 				</div>
 			</div>
