--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -3125,7 +3125,7 @@
         <p id="w-node-_9bb44174-3cc7-0429-ac89-60fd407a3727-d6c3915b" data-w-id="9bb44174-3cc7-0429-ac89-60fd407a3727" class="symptoms-selected-text test"></p>
       </div>
       <div class="start-over-submit">
-        <a href="index.html" aria-current="page" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
+	<a href="physical-checkup.html" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
           <div class="delete-entry-text">Start over</div>
         </a>
         <link rel="prefetch" href="/">
@@ -3134,19 +3134,19 @@
       <div class="step-text _2">Step 2</div>
     </div>
     <div id="w-node-_89a1d9bb-f3b4-f8bd-1ad6-67033c7daaef-d6c3915b" class="nav-wrapper">
-      <a data-w-id="3821abbf-b962-d39f-49b6-211c02815d11" href="http://../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Home</div>
       </a>
-      <a href="index.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
-        <div class="tab-label">Checkup</div>
-      </a>
-      <a href="http://../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Goals</div>
       </a>
-      <a href="http://../insights.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="../insight.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Insights</div>
       </a>
-      <a href="http://../profile.html" class="nav-buttons last w-inline-block"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="physical-checkup.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
+        <div class="tab-label">Checkup</div>
+      </a>
+      <a href="../profile.html" class="nav-buttons w-inline-block"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon" class ="last">
         <div class="tab-label">Log History</div>
       </a>
     </div>
